--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,7 @@ body {
 
 .home-content h1 {
   margin: -3px 0;
-  font-size: 32px;
+  font-size: 28px;
   font-weight: 700;
   opacity: 0;
   -webkit-animation: slideRight 1s ease forwards;
@@ -281,7 +281,7 @@ body {
 }
 
 .home-content h3 {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 700;
   opacity: 0;
   -webkit-animation: slideBottom 1s ease forwards;
@@ -308,14 +308,22 @@ body {
 .home-content p {
   font-size: 16px;
   opacity: 0;
-  -webkit-animation: slideLeft 1s ease forwards;
-          animation: slideLeft 1s ease forwards;
+  -webkit-animation: slideRight 1s ease forwards;
+          animation: slideRight 1s ease forwards;
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
 }
+@media (min-width: 1201px) {
+  .home-content p {
+    -webkit-animation: slideLeft 1s ease forwards;
+            animation: slideLeft 1s ease forwards;
+    -webkit-animation-delay: 1s;
+            animation-delay: 1s;
+  }
+}
 
 .home-image img {
-  max-width: 200px;
+  max-width: 180px;
   -webkit-box-shadow: 0 0 10px #0ef;
           box-shadow: 0 0 10px #0ef;
   border: 2px solid #0ef;
@@ -415,7 +423,7 @@ body {
 }
 
 .projects h2 {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
   margin-bottom: 30px;
   opacity: 0;
@@ -555,7 +563,7 @@ body {
 }
 
 .skills h2 {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
   margin-bottom: 30px;
   opacity: 0;
