--- a/sass/components/_home.scss
+++ b/sass/components/_home.scss
@@ -20,7 +20,7 @@
 
 .home-content h1 {
   margin: -3px 0;
-  font-size: 32px;
+  font-size: 28px;
   font-weight: 700;
   opacity: 0;
   animation: slideRight 1s ease forwards;
@@ -31,7 +31,7 @@
 }
 
 .home-content h3 {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 700;
   opacity: 0;
   animation: slideBottom 1s ease forwards;
@@ -55,12 +55,16 @@
 .home-content p {
   font-size: 16px;
   opacity: 0;
-  animation: slideLeft 1s ease forwards;
+  animation: slideRight 1s ease forwards;
   animation-delay: 1s;
+  @media (min-width: 1201px) {
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 1s;
+  }
 }
 
 .home-image img {
-  max-width: 200px;
+  max-width: 180px;
   box-shadow: 0 0 10px $accent-color;
   border: 2px solid $accent-color;
   border-radius: 20px;
