--- a/css/main.css
+++ b/css/main.css
@@ -176,7 +176,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   z-index: 100;
-  background: transparent;
+  background-color: rgba(31, 36, 45, 0.9);
 }
 
 .logo {
@@ -197,7 +197,7 @@ body {
 
 @media (max-width: 600px) {
   .navbar {
-    margin: 0 auto;
+    margin-left: auto;
   }
 }
 
@@ -244,7 +244,7 @@ body {
           align-items: center;
   width: 100%;
   height: 100vh;
-  padding: 100px 10% 0;
+  padding: 120px 10% 0;
 }
 @media (min-width: 1201px) {
   .home {
@@ -319,6 +319,12 @@ body {
             animation: slideLeft 1s ease forwards;
     -webkit-animation-delay: 1s;
             animation-delay: 1s;
+  }
+}
+
+@media (max-width: 1200px) {
+  .home-image {
+    margin-bottom: 30px;
   }
 }
 
@@ -419,18 +425,13 @@ body {
 }
 
 .projects {
-  padding: 100px 10% 0;
+  padding: 120px 10% 0;
 }
 
 .projects h2 {
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 30px;
-  opacity: 0;
-  -webkit-animation: slideLeft 1s ease forwards;
-          animation: slideLeft 1s ease forwards;
-  -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
 }
 @media (min-width: 601px) {
   .projects h2 {
@@ -559,18 +560,13 @@ body {
 }
 
 .skills {
-  padding: 100px 10% 0;
+  padding: 120px 10% 0;
 }
 
 .skills h2 {
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 30px;
-  opacity: 0;
-  -webkit-animation: slideLeft 1s ease forwards;
-          animation: slideLeft 1s ease forwards;
-  -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
 }
 @media (min-width: 601px) {
   .skills h2 {
@@ -588,8 +584,4 @@ body {
           animation: slideTop 1s ease forwards;
   -webkit-animation-delay: calc(0.2s * var(--i));
           animation-delay: calc(0.2s * var(--i));
-}
-
-.skills__text {
-  color: #0ef;
 }/*# sourceMappingURL=main.css.map */
