--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -9,5 +9,5 @@
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  background: transparent;
+  background-color: rgba(31, 36, 45, 0.9);
 }
