--- a/sass/components/_home.scss
+++ b/sass/components/_home.scss
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-  padding: 100px 10% 0;
+  padding: 120px 10% 0;
   @media (min-width: 1201px) {
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -60,6 +60,12 @@
   @media (min-width: 1201px) {
     animation: slideLeft 1s ease forwards;
     animation-delay: 1s;
+  }
+}
+
+.home-image {
+  @media (max-width: 1200px) {
+    margin-bottom: 30px;
   }
 }
 
