--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,12 @@ body {
   color: #fff;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 @-webkit-keyframes slideRight {
   0% {
     -webkit-transform: translateX(-100px);
@@ -484,15 +490,6 @@ body {
 }
 
 .project-card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -509,17 +506,14 @@ body {
 }
 
 .project-card__image {
-  width: 100%;
   height: 100%;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .project-card__cont {
   padding: 20px 24px;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
 }
 
 .project-card__title {
